# libfi

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: CMakeLists.txt  example_simple.cpp  simple.cpp
include/fi/: CFixed.hpp  Fixed.hpp  libfi.h
include/fi/overflow/: Exceptions.hpp  Saturate.hpp  Throw.hpp  Undefined.hpp  Wrap.hpp
include/fi/private/: Arithmetic.hpp  CFixed_priv.hpp  DoubleConversion.hpp  Fi.hpp  FixedConversion.hpp  Fixed_priv.hpp  Info.hpp  Limits.hpp  Masks.hpp  OverflowDetector.hpp  Parser.hpp  StaticAssert.hpp  StringConversion.hpp  StringMath.hpp  Traits.hpp  TypeFromRange.hpp
include/fi/private/overflow/: Exceptions_impl.hpp  Saturate.hpp  Throw.hpp  Undefined.hpp  Wrap.hpp
include/fi/private/rounding/: Ceil.hpp  Classic.hpp  Fix.hpp  Floor.hpp  NearEven.hpp  NearOdd.hpp
include/fi/rounding/: Ceil.hpp  Classic.hpp  Fix.hpp  Floor.hpp  NearEven.hpp  NearOdd.hpp
samples/: CMakeLists.txt  fixed.cpp
scripts/: run_tests.sh
tests/: Binary_test.cpp  CFixed_arith_test.cpp  CFixed_autoconvert_test.cpp  CFixed_basic_test.cpp  CFixed_comp_test.cpp  CMakeLists.txt  Ceil_test.cpp  Classic_test.cpp  Conversion_test.cpp  DoubleConversion_test.cpp  Fix_test.cpp  Floor_test.cpp  Makefile  MinMax_test.cpp  NearEven_test.cpp  NearOdd_test.cpp  OverflowDetector_test.cpp  StringConversion_test.cpp  StringMath_test.cpp  Undefined_test.cpp  construction8_test.cpp  construction_d1_test.cpp  construction_eq_test.cpp  construction_test.cpp  fixed_autoconvert_test.cpp  fixed_t7_test.cpp  fixed_t_test.cpp  fixed_t_test.m  issue_26_test.cpp  min_max_test.cpp  min_max_val_test.cpp  negation_test.cpp  parsing_test.cpp  to_type_test.cpp  u_construction_test.cpp  ufixed_t_test.cpp  w_eq_f_test.cpp
tools/: CMakeLists.txt  fixed.cpp
